--- a/app/src/main/res/layout/cardview_product.xml
+++ b/app/src/main/res/layout/cardview_product.xml
@@ -14,92 +14,81 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/product_cardview_background">
-
-        <ImageView
-            android:id="@+id/cardview_product_look_pic"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="12dp"
-            android:adjustViewBounds="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/lr_guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/cardview_product_name"
-            style="@style/Widget.Scannera.TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:textColor="?attr/colorPrimaryDark"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/lr_guideline"
-            app:layout_constraintTop_toBottomOf="@id/star_btn" />
-
-        <TextView
-            android:id="@+id/cardview_product_brand"
-            style="@style/Widget.Scannera.TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="12dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="@color/blue_grey"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/lr_guideline"
-            app:layout_constraintTop_toBottomOf="@id/cardview_product_name"
-            card_view:layout_constraintBottom_toTopOf="@id/mid_h_guideline"
-            card_view:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/cardview_product_price"
-            style="@style/Widget.Scannera.TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="?attr/colorPrimaryDark"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/lr_guideline"
-            app:layout_constraintTop_toBottomOf="@id/mid_h_guideline" />
 
         <ImageButton
             android:id="@+id/star_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_margin="12dp"
             android:background="#00ffffff"
             android:contentDescription="@string/product_star_btn_content_description"
             android:src="@android:drawable/btn_star"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/cardview_product_look_pic"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="12dp"
+            android:adjustViewBounds="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/lr_guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/star_btn" />
+
+        <LinearLayout
+            android:id="@+id/cardview_product_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp"
+            card_view:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/lr_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+        <TextView
+            android:id="@+id/cardview_product_name"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textStyle="bold"
+            android:textColor="?attr/colorPrimaryDark"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/cardview_product_brand"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textColor="@color/blue_grey"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/cardview_product_price"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+        </LinearLayout>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/lr_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/mid_h_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            card_view:layout_constraintGuide_percent="0.75" />
+            card_view:layout_constraintGuide_percent="0.3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
