Created product review fragment, implemented its layout

--- a/app/src/main/res/layout/fragment_similar_products.xml
+++ b/app/src/main/res/layout/fragment_similar_products.xml
@@ -14,10 +14,7 @@
         android:layout_marginTop="18dp"
         android:layout_marginBottom="18dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/sort_by_label"
@@ -50,6 +47,9 @@
 
     </LinearLayout>
 
-    <include layout="@layout/pure_recyclerview"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
