--- a/app/src/main/res/layout/fragment_similar_products.xml
+++ b/app/src/main/res/layout/fragment_similar_products.xml
@@ -49,6 +49,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
