--- a/app/src/main/res/layout/cardview_nutritional_attribute.xml
+++ b/app/src/main/res/layout/cardview_nutritional_attribute.xml
@@ -13,8 +13,10 @@
     card_view:cardCornerRadius="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="110dp"
-        android:layout_height="110dp"
+        android:minWidth="110dp"
+        android:minHeight="110dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/nutritional_attribute_cardview_background">
 
         <TextView
@@ -41,6 +43,8 @@
             android:paddingEnd="12dp"
             android:layout_marginBottom="12dp"
             android:gravity="center"
+            android:maxEms="10"
+            android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/white"
             android:textSize="@dimen/comparisons_activity_text_size"
