--- a/app/src/main/res/layout/fragment_similar_products.xml
+++ b/app/src/main/res/layout/fragment_similar_products.xml
@@ -5,8 +5,17 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+<!--    <TextView-->
+<!--        android:id="@+id/sort_by_label"-->
+<!--        style="@style/Widget.Scannera.TextView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/sort_by"-->
+<!--        android:textColor="?attr/colorPrimaryDark"-->
+<!--        android:textSize="16sp" />-->
+
     <LinearLayout
-        android:id="@+id/top_sort_by_layout"
+        android:id="@+id/sort_by_layout"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:layout_marginStart="12dp"
@@ -16,22 +25,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/sort_by_label"
-            style="@style/Widget.Scannera.TextView"
+        <androidx.appcompat.widget.SwitchCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:text="@string/sort_by"
-            android:textColor="?attr/colorPrimaryDark"
-            android:textSize="18sp" />
+            android:text="Sort By Ascending"
+            android:layout_gravity="center"
+            android:layout_marginEnd="12dp"
+            android:textColor="?attr/colorPrimaryDark" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/sort_by_input_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center">
 
             <AutoCompleteTextView
                 android:id="@+id/sort_by_autoCompleteTv"
