--- a/app/src/main/res/layout/activity_product_information.xml
+++ b/app/src/main/res/layout/activity_product_information.xml
@@ -209,6 +209,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/nutrition_recyclerView"
+            android:minHeight="150dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
