Chat bot activity (Second phase of implementation done): implemented the cardview layouts for send msg and recv msg, the associated string values, layouts, etc...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/scan_fab"
-        android:src="@drawable/scan_ic"
+        android:src="@drawable/ic_scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/robin_blue"
