--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -147,7 +147,7 @@
                     android:layout_height="@dimen/social_icons_size"
                     android:layout_margin="@dimen/social_icons_margin"
                     android:clickable="true"
-                    android:src="@drawable/facebook_ic" />
+                    android:src="@drawable/ic_facebook" />
 
                 <ImageView
                     android:id="@+id/google_login_button"
@@ -155,7 +155,7 @@
                     android:layout_height="@dimen/social_icons_size"
                     android:layout_margin="@dimen/social_icons_margin"
                     android:clickable="true"
-                    android:src="@drawable/google_ic" />
+                    android:src="@drawable/ic_google" />
             </LinearLayout>
         </LinearLayout>
 
