--- a/app/src/main/res/layout/cardview_msg_send.xml
+++ b/app/src/main/res/layout/cardview_msg_send.xml
@@ -16,11 +16,13 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/message_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="3dp"
             android:layout_gravity="center"
+            android:fontFamily="@font/roboto_slab"
             android:textSize="@dimen/chat_msg_text_size"
             android:textColor="@color/black"/>
         
