--- a/app/src/main/res/layout/cardview_msg_send.xml
+++ b/app/src/main/res/layout/cardview_msg_send.xml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_gravity="end"
-    android:layout_width="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="3dp"
-    android:clickable="false"
-    android:background="@drawable/background_msg_send">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="end"
+        android:layout_margin="8dp"
+        app:cardElevation="3dp"
+        android:background="@android:color/transparent"
+        app:cardPreventCornerOverlap="true"
+        android:clickable="false"
+        card_view:cardCornerRadius="8dp">
 
-        <TextView
-            android:id="@+id/message_tv"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="3dp"
-            android:layout_gravity="center"
-            android:fontFamily="@font/roboto_slab"
-            android:textSize="@dimen/chat_msg_text_size"
-            android:textColor="@color/black"/>
-        
-        <ImageView
-            android:layout_width="@dimen/chat_msg_owner_icon_size"
-            android:layout_height="@dimen/chat_msg_owner_icon_size"
-            android:layout_margin="12dp"
-            android:src="@drawable/ic_user"/>
+            android:orientation="horizontal"
+            android:background="@android:color/holo_green_light">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/message_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:padding="3dp"
+                android:layout_gravity="center"
+                android:fontFamily="@font/roboto_slab"
+                android:textSize="@dimen/chat_msg_text_size"
+                android:textColor="@color/black" />
 
-</androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="@dimen/chat_msg_owner_icon_size"
+                android:layout_height="@dimen/chat_msg_owner_icon_size"
+                android:layout_margin="12dp"
+                android:src="@drawable/ic_user"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
