--- a/app/src/main/res/layout/cardview_product.xml
+++ b/app/src/main/res/layout/cardview_product.xml
@@ -35,6 +35,7 @@
             android:layout_height="100dp"
             android:layout_margin="12dp"
             android:adjustViewBounds="true"
+            android:src="@color/browser_actions_bg_grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/lr_guideline"
             app:layout_constraintStart_toStartOf="parent"
