Renamed to ask scannera bot

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -135,13 +135,13 @@
             app:layout_constraintTop_toBottomOf="@id/scan_history_btn" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/chat_with_bot_btn"
+            android:id="@+id/ask_bot_btn"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/user_activity_list_btn_height"
             android:elegantTextHeight="true"
             android:gravity="start|center_vertical"
-            android:text="@string/chat_with_bot"
+            android:text="@string/ask_bot"
             android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="@dimen/user_activity_list_btn_text_size"
@@ -166,7 +166,7 @@
             android:textAllCaps="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chat_with_bot_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/ask_bot_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
