--- a/app/src/main/res/layout/cardview_nutritional_attribute.xml
+++ b/app/src/main/res/layout/cardview_nutritional_attribute.xml
@@ -1,58 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nutrition_attribute_card_view"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    app:cardElevation="3dp"
-    app:cardPreventCornerOverlap="true"
-    android:clickable="false"
-    card_view:cardCornerRadius="5dp">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/nutrition_attribute_layout"
-        android:minWidth="110dp"
-        android:minHeight="110dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/nutrition_attribute_card_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/nutritional_attribute_cardview_background">
+        android:layout_margin="10dp"
+        app:cardElevation="3dp"
+        app:cardPreventCornerOverlap="true"
+        android:clickable="false"
+        card_view:cardCornerRadius="5dp"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/attribute_value"
-            style="@style/Widget.Scannera.TextView"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/nutrition_attribute_layout"
+            android:minWidth="110dp"
+            android:minHeight="110dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:maxLines="2"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/comparisons_activity_text_size"
-            app:layout_constraintBottom_toTopOf="@id/attribute_name"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            android:background="@drawable/nutritional_attribute_cardview_background">
 
-        <TextView
-            android:id="@+id/attribute_name"
-            style="@style/Widget.Scannera.TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:layout_marginBottom="12dp"
-            android:gravity="center"
-            android:maxEms="10"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:textColor="@color/white"
-            android:textSize="@dimen/comparisons_activity_text_size"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            <TextView
+                android:id="@+id/attribute_value"
+                style="@style/Widget.Scannera.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:maxLines="2"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/comparisons_activity_text_size"
+                app:layout_constraintBottom_toTopOf="@id/attribute_name"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/attribute_name"
+                style="@style/Widget.Scannera.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:layout_marginBottom="12dp"
+                android:gravity="center"
+                android:maxEms="10"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textColor="@color/white"
+                android:textSize="@dimen/comparisons_activity_text_size"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/attribute_degree"
+        style="@style/Widget.Scannera.TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:maxLines="1"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:textSize="@dimen/comparisons_activity_text_size"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nutrition_attribute_card_view" />
+</androidx.constraintlayout.widget.ConstraintLayout>
