--- a/app/src/main/res/layout/fragment_home_content.xml
+++ b/app/src/main/res/layout/fragment_home_content.xml
@@ -21,15 +21,15 @@
         android:fontFamily="@font/roboto_slab"
         android:textColor="@color/black"
         android:textSize="@dimen/activity_title_text_size"
-        app:layout_constraintEnd_toStartOf="@+id/home_user_img"
+        app:layout_constraintEnd_toStartOf="@+id/home_user_profile_img"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/top_guideline" />
 
     <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/home_user_img"
-        android:layout_width="@dimen/home_fragment_user_img_size"
-        android:layout_height="@dimen/home_fragment_user_img_size"
+        android:id="@+id/home_user_profile_img"
+        android:layout_width="@dimen/home_fragment_user_profile_img_size"
+        android:layout_height="@dimen/home_fragment_user_profile_img_size"
         android:layout_marginEnd="24dp"
         android:src="@drawable/ic_person"
         app:civ_border_color="@color/black"
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="welcome_username_tv,home_user_img" />
+        app:constraint_referenced_ids="welcome_username_tv,home_user_profile_img" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
