--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,9 +16,10 @@
     <dimen name="user_activity_list_btn_height">72dp</dimen>
     <dimen name="user_activity_list_btn_text_size">17sp</dimen>
     <dimen name="user_activity_list_btn_icon_padding">24dp</dimen>
-    <dimen name="acc_frag_user_profile_img_size">100dp</dimen>
+    <dimen name="user_profile_img_size">100dp</dimen>
     <dimen name="home_welcome_text_start_margin">24dp</dimen>
-    <dimen name="home_fragment_user_img_size">40dp</dimen>
+    <dimen name="home_fragment_user_profile_img_size">40dp</dimen>
+    <dimen name="acc_info_user_profile_img_size">140dp</dimen>
     <dimen name="dialog_msg_max_width">350dp</dimen>
     <dimen name="product_feed_text_size">17sp</dimen>
     <dimen name="product_feed_input_margin_start">20dp</dimen>
