Implemented photo take feature for user profile image

--- a/app/src/main/res/layout/activity_confirm_profile_image.xml
+++ b/app/src/main/res/layout/activity_confirm_profile_image.xml
@@ -4,7 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ConfirmProfileImgFragment">
+    tools:context=".ConfirmProfileImageActivity">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        app:elevation="0dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:color/transparent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/Widget.Scannera.Toolbar"
+            android:theme="@style/Widget.Scannera.ToolbarTheme" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
         android:id="@+id/preview_profile_image_tv"
@@ -16,8 +35,7 @@
         android:textSize="@dimen/activity_title_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="?attr/actionBarSize"/>
+        app:layout_constraintTop_toBottomOf="@id/app_bar" />
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/user_profile_img"
